LLMAI-136: Harden the MCP server infrastructure   * Run tool handlers inline on the request thread (immediateExecution) and     remove the Reactor scheduler context-propagation hook this replaces   * Add a per-call middleware seam in the server manager: an INFO audit line     (tool, acting user, outcome, duration - never arguments) and normalization     of escaping exceptions and null results into regular MCP error results   * Fault-isolate tool registration: a tool that throws or whose name clashes     is skipped with a warning instead of failing the whole server build   * Append a man-tool usage hint to the initialization instructions whenever     the man tool is registered   * Add MCPToolSupport: shared argument coercion with strict semantics, result     builders, and a declarative parameter descriptor that generates both the     advertised input schema and the typed accessors from one declaration   * Support per-file checkstyle suppressions; exempt the composition-root     server manager from ClassFanOutComplexity